--- a/templates/booking.html
+++ b/templates/booking.html
@@ -1,28 +1,17 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking for {{ competition['name'] }} || GUDLFT</title>
-</head>
-<body>
-    <h2>{{ competition['name'] }}</h2>
+{% extends 'base_layout.html' %}
 
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul>
-       {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-       </ul>
-    {% endif %}
-    {% endwith %}
+{% block title %}
+    Booking for {{ competition['name'] }} || GUDLFT
+{% endblock %}
 
-    Places available: {{ competition['number_of_places'] }}
-    <form action="/purchase-places" method="post">
-        <input type="hidden" name="club" value="{{ club['name'] }}">
-        <input type="hidden" name="competition" value="{{ competition['name'] }}">
-        <label for="places">How many places?</label><input type="number" name="places" id=""/>
-        <button type="submit">Book</button>
-    </form>
-</body>
-</html>
+{% block content %}
+<h2>{{ competition['name'] }}</h2>
+
+<p>Places available: {{ competition['number_of_places'] }} | Points available: {{ club['points'] }}</p>
+<form action="/purchase-places" method="post">
+    <input type="hidden" name="club" value="{{ club['name'] }}">
+    <input type="hidden" name="competition" value="{{ competition['name'] }}">
+    <label for="places">How many places?</label><input type="number" name="places" id=""/>
+    <button type="submit">Book</button>
+</form>
+{% endblock %}
