--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,21 +1,14 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary | GUDLFT Registration</title>
-</head>
-<body>
-        <h2>Welcome, {{ club['email'] }} </h2><a href="{{ url_for('logout') }}">Logout</a>
+{% extends 'base_layout.html' %}
 
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul>
-       {% for message in messages %}
-            <li>{{ message }}</li>
-        {% endfor %}
-       </ul>
-    {% endif %}
-    Points available: {{ club['points'] }}
+{% block title %}
+    Summary | GUDLFT Registration
+{% endblock %}
+
+{% block content %}
+    <h2>Welcome, {{ club['email'] }} </h2>
+    <a href="{{ url_for('logout') }}">Logout</a>
+
+    <p>Points available: {{ club['points'] }}</p>
     <h3>Competitions:</h3>
     <ul>
         {% for comp in competitions_ongoing %}
@@ -40,7 +33,4 @@
         <hr>
         {% endfor %}
     </ul>
-    {% endwith %}
-
-</body>
-</html>
+{% endblock %}
