modified buttons in templates. improved purchase-places route

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <form action="show-summary" method="post">
     <label for="email">Email:</label>
     <input type="email" name="email" id=""/>
-    <button type="submit">Enter</button>
+    <button class="btn btn-outline-secondary btn-sm" type="submit">Enter</button>
 </form>
 
 <hr>
