--- a/templates/booking.html
+++ b/templates/booking.html
@@ -12,6 +12,6 @@
     <input type="hidden" name="club" value="{{ club['name'] }}">
     <input type="hidden" name="competition" value="{{ competition['name'] }}">
     <label for="places">How many places?</label><input type="number" name="places" id=""/>
-    <button type="submit">Book</button>
+    <button type="submit" class="btn btn-outline-secondary btn-sm">Book</button>
 </form>
 {% endblock %}
