add value to the id attribute in the forms

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <p>Please enter your secretary email to continue:</p>
 <form action="show-summary" method="post">
     <label for="email">Email:</label>
-    <input type="email" name="email" id=""/>
+    <input type="email" name="email" id="email"/>
     <button class="btn btn-outline-secondary btn-sm" type="submit">Enter</button>
 </form>
 
