--- a/templates/booking.html
+++ b/templates/booking.html
@@ -11,7 +11,7 @@
 <form action="/purchase-places" method="post">
     <input type="hidden" name="club" value="{{ club['name'] }}">
     <input type="hidden" name="competition" value="{{ competition['name'] }}">
-    <label for="places">How many places?</label><input type="number" name="places" id=""/>
+    <label for="places">How many places?</label><input type="number" name="places" id="places"/>
     <button type="submit" class="btn btn-outline-secondary btn-sm">Book</button>
 </form>
 {% endblock %}
